--- a/bike/bikeapp/templates/bikeapp/main_page_map.html
+++ b/bike/bikeapp/templates/bikeapp/main_page_map.html
@@ -24,12 +24,10 @@
 		<script src="{% static 'js/sidemenu.min.js' %}"></script>
 		<img src="{% static 'img/img14.jpg' %} ">
 		<img src="{% static 'img/logo.png' %} ">
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	</head>
 	<body class="app ">
 
-		<div id="spinner">mainpage!!!!!!!!!!</div>
+		<div id="spinner"></div>
 
 		<div id="app">
 			<div class="main-wrapper" >
