login_register finish1

--- a/bike/bikeapp/templates/bikeapp/main_page_map.html
+++ b/bike/bikeapp/templates/bikeapp/main_page_map.html
@@ -27,7 +27,7 @@
 	</head>
 	<body class="app ">
 
-		<div id="spinner"></div>
+		<div id="spinner">mainpage!!!!!!!!!!</div>
 
 		<div id="app">
 			<div class="main-wrapper" >
