--- a/bike/bikeapp/templates/bikeapp/history.html
+++ b/bike/bikeapp/templates/bikeapp/history.html
@@ -50,7 +50,7 @@
 
       <!-- Unnamed (sidepanel) -->
 
-      <!-- 内部框架 (Inline Frame) -->
+      <!-- Internal Frame -->
       <div id="u1160" class="ax_default" data-label="内部框架">
         <iframe id="u1160_input" data-label="内部框架" scrolling="auto" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
