--- a/bike/bikeapp/templates/bikeapp/bike_map.html
+++ b/bike/bikeapp/templates/bikeapp/bike_map.html
@@ -44,7 +44,7 @@
 
           <!--show the google map-->
           var map = new google.maps.Map(document.getElementById('map'), {
-           <!--zoom缩放，越大越精细-->
+           <!--Zoom,bigger and finer-->
               zoom: 16,
               center: new google.maps.LatLng(55.87189, -4.28922),
               mapTypeId: google.maps.MapTypeId.ROADMAP
