--- a/bike/bikeapp/templates/bikeapp/index.html
+++ b/bike/bikeapp/templates/bikeapp/index.html
@@ -140,7 +140,7 @@
 			
 			 <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="reports">
+                <a class="nav-link" href="datavisualization">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Reports</span></a>
             </li>
