--- a/bike/bikeapp/templates/bikeapp/index.html
+++ b/bike/bikeapp/templates/bikeapp/index.html
@@ -36,7 +36,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/login">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
@@ -48,7 +48,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="/login">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span></a>
             </li>
@@ -63,12 +63,12 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="rent" data-toggle="collapse" data-target="#collapseTwo"
+                <a class="nav-link collapsed" href="/rent" data-toggle="collapse" data-target="#collapseTwo"
                     aria-expanded="true" aria-controls="collapseTwo">
                     <i class="fas fa-fw fa-cog"></i>
                     <span>Rent</span>
                 </a>
-				<a class="nav-link collapsed" href="return" data-toggle="collapse" data-target="#collapseTwo"
+				<a class="nav-link collapsed" href="/return" data-toggle="collapse" data-target="#collapseTwo"
                     aria-expanded="true" aria-controls="collapseTwo">
                     <i class="fas fa-fw fa-cog"></i>
                     <span>Return</span>
@@ -84,10 +84,10 @@
 
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="report" data-toggle="collapse" data-target="#collapseUtilities"
+                <a class="nav-link collapsed" href="/defective" data-toggle="collapse" data-target="#collapseUtilities"
                     aria-expanded="true" aria-controls="collapseUtilities">
                     <i class="fas fa-fw fa-wrench"></i>
-                    <span>Report</span>
+                    <span>Report Broken Bike</span>
                 </a>
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
@@ -106,15 +106,15 @@
 
             <!-- Heading -->
             <div class="sidebar-heading">
-                Admin
+                Admin functions
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
+                <a class="nav-link collapsed" href="" data-toggle="collapse" data-target="#collapsePages"
                     aria-expanded="true" aria-controls="collapsePages">
                     <i class="fas fa-fw fa-folder"></i>
-                    <span>Repair</span>
+                    <span>Repair Bike</span>
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
@@ -135,12 +135,12 @@
             <li class="nav-item">
                 <a class="nav-link" href="bikemap">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Move Bikes</span></a>
+                    <span>View Map of Bikes</span></a>
             </li>
 			
 			 <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="datavisualization">
+                <a class="nav-link" href="/datavisualization">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Reports</span></a>
             </li>
