datavis page centered but without the side bar

--- a/bike/bikeapp/templates/bikeapp/datavisualization.html
+++ b/bike/bikeapp/templates/bikeapp/datavisualization.html
@@ -1,9 +1,30 @@
+
+
+
+<!DOCTYPE html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!-- Zihes Data Visualation html -->
 <!--bar_rent_duration-->
 
-<!DOCTYPE html>
-<html>
+
+
 <head>
+
     <meta charset="UTF-8">
     <title>Awesome-pyecharts</title>
             <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts.min.js"></script>
@@ -12,142 +33,10 @@
 <body>
 
 
-<body id="page-top">
+    <div id="4ded19ff758947b1b59ec7ef0e8c52ef" class="chart-container position-absolute" style="padding-top: 50px;padding-left:350px;width:1000px; height:500px;"></div>
 
-    <!-- Page Wrapper -->
-    <div id="wrapper">
+            <script>
 
-        <!-- Sidebar -->
-        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
-
-            <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-                <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
-                </div>
-                <div class="sidebar-brand-text mx-3">Welcome</sup></div>
-            </a>
-
-            <!-- Divider -->
-            <hr class="sidebar-divider my-0">
-
-            <!-- Nav Item - Dashboard -->
-            <li class="nav-item active">
-                <a class="nav-link" href="index.html">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Dashboard</span></a>
-            </li>
-
-            <!-- Divider -->
-            <hr class="sidebar-divider">
-
-            <!-- Heading -->
-            <div class="sidebar-heading">
-                Bikes Nearby
-            </div>
-
-            <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="rent" data-toggle="collapse" data-target="#collapseTwo"
-                    aria-expanded="true" aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
-                    <span>Rent</span>
-                </a>
-				<a class="nav-link collapsed" href="return" data-toggle="collapse" data-target="#collapseTwo"
-                    aria-expanded="true" aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
-                    <span>Return</span>
-                </a>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="buttons.html">Buttons</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
-                    </div>
-                </div>
-            </li>
-
-            <!-- Nav Item - Utilities Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="report" data-toggle="collapse" data-target="#collapseUtilities"
-                    aria-expanded="true" aria-controls="collapseUtilities">
-                    <i class="fas fa-fw fa-wrench"></i>
-                    <span>Report</span>
-                </a>
-                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-                    data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Utilities:</h6>
-                        <a class="collapse-item" href="utilities-color.html">Colors</a>
-                        <a class="collapse-item" href="utilities-border.html">Borders</a>
-                        <a class="collapse-item" href="utilities-animation.html">Animations</a>
-                        <a class="collapse-item" href="utilities-other.html">Other</a>
-                    </div>
-                </div>
-            </li>
-
-            <!-- Divider -->
-            <hr class="sidebar-divider">
-
-            <!-- Heading -->
-            <div class="sidebar-heading">
-                Admin
-            </div>
-
-            <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
-                    aria-expanded="true" aria-controls="collapsePages">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Repair</span>
-                </a>
-                <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Login Screens:</h6>
-                        <a class="collapse-item" href="login.html">Login</a>
-                        <a class="collapse-item" href="register.html">Register</a>
-                        <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
-                        <div class="collapse-divider"></div>
-                        <h6 class="collapse-header">Other Pages:</h6>
-                        <a class="collapse-item" href="404.html">404 Page</a>
-                        <a class="collapse-item" href="blank.html">Blank Page</a>
-                    </div>
-                </div>
-            </li>
-
-
-            <!-- Nav Item - Tables -->
-            <li class="nav-item">
-                <a class="nav-link" href="bikemap">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Move Bikes</span></a>
-            </li>
-
-			 <!-- Nav Item - Charts -->
-            <li class="nav-item">
-                <a class="nav-link" href="reports">
-                    <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Reports</span></a>
-            </li>
-
-            <!-- Divider -->
-            <hr class="sidebar-divider d-none d-md-block">
-
-            <!-- Sidebar Toggler (Sidebar) -->
-            <div class="text-center d-none d-md-inline">
-                <button class="rounded-circle border-0" id="sidebarToggle"></button>
-            </div>
-
-            <!-- Sidebar Message -->
-            <div class="sidebar-card">
-                <img class="sidebar-card-illustration mb-2" src="img/undraw_rocket.svg" alt="">
-                <p class="text-center mb-2"><strong>1F- Bikes</strong> is dedicated to improve the Environment and is partnered with top NGOs</p>
-                <a class="btn btn-success btn-sm" href="https://www.greenpeace.org.uk/">Donate Now!</a>
-            </div>
-
-        </ul>
-    <div id="4ded19ff758947b1b59ec7ef0e8c52ef" class="chart-container" style="width:900px; height:500px;"></div>
-    <script>
         var chart_4ded19ff758947b1b59ec7ef0e8c52ef = echarts.init(
             document.getElementById('4ded19ff758947b1b59ec7ef0e8c52ef'), 'white', {renderer: 'canvas'});
         var option_4ded19ff758947b1b59ec7ef0e8c52ef = {
@@ -343,14 +232,16 @@
     ]
 };
         chart_4ded19ff758947b1b59ec7ef0e8c52ef.setOption(option_4ded19ff758947b1b59ec7ef0e8c52ef);
-    </script>
+</script>
+    </div>
+</div>
+</body>
 </body>
 </html>
 
 
 <!--bar_datazoom_payment quantity-->
 
-<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -359,7 +250,10 @@
 
 </head>
 <body>
-    <div id="7abe8dae08604e56b1c2492d3914bb2e" class="chart-container" style="width:900px; height:500px;"></div>
+
+
+    <div id="7abe8dae08604e56b1c2492d3914bb2e" class="chart-container"  style="padding-top: 50px;padding-left:350px;width:1000px; height:500px;"></div>
+
     <script>
         var chart_7abe8dae08604e56b1c2492d3914bb2e = echarts.init(
             document.getElementById('7abe8dae08604e56b1c2492d3914bb2e'), 'white', {renderer: 'canvas'});
@@ -1145,8 +1039,10 @@
 
 <!DOCTYPE html>
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 
+    <div style="width:900px; height:500px; margin: auto">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" ,style="padding-left:100px;width:900px"/>
+</div>
         <script>
             L_NO_TOUCH = false;
             L_DISABLE_3D = false;
@@ -1170,9 +1066,9 @@
             <style>
                 #map_d821d26703c74b5cb2bc9230c4e3eec5 {
                     position: relative;
-                    width: 100.0%;
+                    width: 50.0%;
                     height: 100.0%;
-                    left: 0.0%;
+                    left: 400px;
                     top: 0.0%;
                 }
             </style>
@@ -1274,12 +1170,13 @@
             <style>
                 #map_c4e0a1caea7f4dba95d034db37258478 {
                     position: relative;
-                    width: 100.0%;
+                    width: 50.0%;
                     height: 100.0%;
-                    left: 0.0%;
+                    left: 400px;
                     top: 0.0%;
                 }
             </style>
+
 
     <script src="https://cdn.jsdelivr.net/gh/python-visualization/folium@master/folium/templates/leaflet_heat.min.js"></script>
 </head>
@@ -1350,8 +1247,6 @@
 
 
 
-
-
 <!--pie_bike_status-->
 
 <!DOCTYPE html>
@@ -1363,7 +1258,11 @@
 
 </head>
 <body>
-    <div id="5c0123c4775e4e268089a9f41d3fc18a" class="chart-container" style="width:1600px; height:800px;"></div>
+
+<div style="width:100%; height:800px; margin: auto">
+
+    <div id="5c0123c4775e4e268089a9f41d3fc18a" class="chart-container" style="padding-left:100px;width:1600px; height:800px;"></div>
+    </div >
     <script>
         var chart_5c0123c4775e4e268089a9f41d3fc18a = echarts.init(
             document.getElementById('5c0123c4775e4e268089a9f41d3fc18a'), 'white', {renderer: 'canvas'});
@@ -1617,6 +1516,7 @@
             "selected": {},
             "show": true,
             "left": "left",
+            "top":"center",
             "orient": "vertical",
             "padding": 5,
             "itemGap": 10,
@@ -1666,8 +1566,10 @@
 
 </head>
 <body>
-    <div id="f13707cf76c44639b193d2715c7a476a" class="chart-container" style="width:900px; height:500px;"></div>
-    <script>
+<div style="width:900px; height:600px; margin: auto">
+    <div id="f13707cf76c44639b193d2715c7a476a" class="chart-container" style="padding-left: 100px ;padding-top: 50px; width:900px; height:500px;"></div>
+</div>
+<script>
         var chart_f13707cf76c44639b193d2715c7a476a = echarts.init(
             document.getElementById('f13707cf76c44639b193d2715c7a476a'), 'white', {renderer: 'canvas'});
         var option_f13707cf76c44639b193d2715c7a476a = {
@@ -1844,8 +1746,14 @@
         <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts-liquidfill.min.js"></script>
 
 </head>
-<body>
-    <div id="255600f08d154477bb296d0f54ddd7c0" class="chart-container" style="width:900px; height:500px;"></div>
+
+
+
+<div style="width:100%; height:800px; margin: auto">
+
+
+    <div id="255600f08d154477bb296d0f54ddd7c0"class="chart-container" style="padding-left:280px; width:1500px; height:500px;"></div>
+</div>
     <script>
         var chart_255600f08d154477bb296d0f54ddd7c0 = echarts.init(
             document.getElementById('255600f08d154477bb296d0f54ddd7c0'), 'white', {renderer: 'canvas'});
@@ -1887,7 +1795,7 @@
     "series": [
         {
             "type": "liquidFill",
-            "name": "Bike ueage Rate",
+            "name": "Bike usage Rate",
             "data": [
                 0.472,
                 null
@@ -2018,10 +1926,16 @@
             "borderColor": "#ccc",
             "borderWidth": 1
         }
+
+
     ]
 };
         chart_255600f08d154477bb296d0f54ddd7c0.setOption(option_255600f08d154477bb296d0f54ddd7c0);
     </script>
+
+
+</ul>
+</div>
 </body>
 </html>
 
