datavis page centered but without the side bar

--- a/bike/bikeapp/templates/bikeapp/datavisualization.html
+++ b/bike/bikeapp/templates/bikeapp/datavisualization.html
@@ -2,35 +2,26 @@
 
 
 <!DOCTYPE html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!-- Zihes Data Visualation html -->
 <!--bar_rent_duration-->
-
-
-
+<html>
 <head>
+    <style>
+        body {
+
+.chart-container {
+  margin-left: 140px;
+  padding: 0px 10px;
+}
+</style>
+</head>
+
+
+<body>
 
     <meta charset="UTF-8">
     <title>Awesome-pyecharts</title>
             <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts.min.js"></script>
-
-</head>
-<body>
 
 
     <div id="4ded19ff758947b1b59ec7ef0e8c52ef" class="chart-container position-absolute" style="padding-top: 50px;padding-left:350px;width:1000px; height:500px;"></div>
@@ -1039,6 +1030,7 @@
 
 <!DOCTYPE html>
 <head>
+    <title>Heat Map for bikes</title>
 
     <div style="width:900px; height:500px; margin: auto">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" ,style="padding-left:100px;width:900px"/>
@@ -1066,7 +1058,7 @@
             <style>
                 #map_d821d26703c74b5cb2bc9230c4e3eec5 {
                     position: relative;
-                    width: 50.0%;
+                    width: 60.0%;
                     height: 100.0%;
                     left: 400px;
                     top: 0.0%;
@@ -1143,9 +1135,12 @@
 
 <!--heatmap_payment-->
 
+
+
 <!DOCTYPE html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+
 
         <script>
             L_NO_TOUCH = false;
@@ -1170,7 +1165,7 @@
             <style>
                 #map_c4e0a1caea7f4dba95d034db37258478 {
                     position: relative;
-                    width: 50.0%;
+                    width: 60.0%;
                     height: 100.0%;
                     left: 400px;
                     top: 0.0%;
@@ -1195,6 +1190,7 @@
                     zoom: 12,
                     zoomControl: true,
                     preferCanvas: false,
+
                 }
             );
 
