--- a/bike/bikeapp/templates/bikeapp/rentbike.html
+++ b/bike/bikeapp/templates/bikeapp/rentbike.html
@@ -65,10 +65,10 @@
 
             <!-- Heading -->
             <div class="sidebar-heading">
-                Operations
+                Bikes Nearby
             </div>
 
-            <!-- Nav Item Users operation-->
+            <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
                     aria-expanded="true" aria-controls="collapseTwo">
@@ -89,7 +89,7 @@
                 </div>
             </li>
 
-            <!-- Nav Item - report-->
+            <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
                     aria-expanded="true" aria-controls="collapseUtilities">
@@ -108,49 +108,49 @@
                 </div>
             </li>
 
-<!--            &lt;!&ndash; Divider &ndash;&gt;-->
-<!--            <hr class="sidebar-divider">-->
+            <!-- Divider -->
+            <hr class="sidebar-divider">
 
-            <!-- Heading operator-->
-<!--            <div class="sidebar-heading">-->
-<!--                Admin-->
-<!--            </div>-->
+            <!-- Heading -->
+            <div class="sidebar-heading">
+                Admin
+            </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"-->
-<!--                    aria-expanded="true" aria-controls="collapsePages">-->
-<!--                    <i class="fas fa-fw fa-folder"></i>-->
-<!--                    <span>Repair</span>-->
-<!--                </a>-->
-<!--                <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">-->
-<!--                    <div class="bg-white py-2 collapse-inner rounded">-->
-<!--                        <h6 class="collapse-header">Login Screens:</h6>-->
-<!--                        <a class="collapse-item" href="login.html">Login</a>-->
-<!--                        <a class="collapse-item" href="register.html">Register</a>-->
-<!--                        <a class="collapse-item" href="forgot-password.html">Forgot Password</a>-->
-<!--                        <div class="collapse-divider"></div>-->
-<!--                        <h6 class="collapse-header">Other Pages:</h6>-->
-<!--                        <a class="collapse-item" href="404.html">404 Page</a>-->
-<!--                        <a class="collapse-item" href="blank.html">Blank Page</a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </li>-->
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
+                    aria-expanded="true" aria-controls="collapsePages">
+                    <i class="fas fa-fw fa-folder"></i>
+                    <span>Repair</span>
+                </a>
+                <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Login Screens:</h6>
+                        <a class="collapse-item" href="login.html">Login</a>
+                        <a class="collapse-item" href="register.html">Register</a>
+                        <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
+                        <div class="collapse-divider"></div>
+                        <h6 class="collapse-header">Other Pages:</h6>
+                        <a class="collapse-item" href="404.html">404 Page</a>
+                        <a class="collapse-item" href="blank.html">Blank Page</a>
+                    </div>
+                </div>
+            </li>
 
 
             <!-- Nav Item - Tables -->
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link" href="tables.html">-->
-<!--                    <i class="fas fa-fw fa-table"></i>-->
-<!--                    <span>Move Bikes</span></a>-->
-<!--            </li>-->
+            <li class="nav-item">
+                <a class="nav-link" href="tables.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>Move Bikes</span></a>
+            </li>
 
 			 <!-- Nav Item - Charts -->
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link" href="charts.html">-->
-<!--                    <i class="fas fa-fw fa-chart-area"></i>-->
-<!--                    <span>Reports</span></a>-->
-<!--            </li>-->
+            <li class="nav-item">
+                <a class="nav-link" href="charts.html">
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>Reports</span></a>
+            </li>
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
@@ -175,7 +175,6 @@
 
             <!-- Main Content -->
             <div id="content">
-                <!-- Begin Page Content -->
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
@@ -224,6 +223,12 @@
                             </div>
                         </div>
 
+                    </div>
+
+
+                </div>
+                <!-- /.container-fluid -->
+
             </div>
             <!-- End of Main Content -->
 
@@ -239,7 +244,7 @@
 
         </div>
         <!-- End of Content Wrapper -->
-            </div>
+
     </div>
     <!-- End of Page Wrapper -->
 
@@ -267,7 +272,6 @@
             </div>
         </div>
     </div>
-        </div>
 
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
@@ -285,7 +289,7 @@
     <!-- Page level custom scripts -->
     <script src="js/demo/chart-area-demo.js"></script>
     <script src="js/demo/chart-pie-demo.js"></script>
-</body>
 
+</body>
 
 </html>
