--- a/bike/bikeapp/templates/bikeapp/index.html
+++ b/bike/bikeapp/templates/bikeapp/index.html
@@ -102,20 +102,20 @@
             </li>
 
             <!-- Divider -->
-            <hr class="sidebar-divider">
+            <!--<hr class="sidebar-divider">
 
             <!-- Heading -->
-            <div class="sidebar-heading">
+           <!--  <div class="sidebar-heading">
                 Admin functions
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="/repairbike" data-toggle="collapse" data-target="#collapsePages"
+             <li class="nav-item">
+                <!--<a class="nav-link collapsed" href="/repairbike" data-toggle="collapse" data-target="#collapsePages"
                     aria-expanded="true" aria-controls="collapsePages">
                     <i class="fas fa-fw fa-folder"></i>
                     <span>Repair Bike</span>
-                </a>
+                </a>-->
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Login Screens:</h6>
@@ -132,18 +132,18 @@
 
            
             <!-- Nav Item - Tables -->
-            <li class="nav-item">
+           <!-- <li class="nav-item">
                 <a class="nav-link" href="bikemap">
                     <i class="fas fa-fw fa-table"></i>
                     <span>View Map of Bikes</span></a>
-            </li>
+            </li>-->
 			
 			 <!-- Nav Item - Charts -->
-            <li class="nav-item">
+           <!-- <li class="nav-item">
                 <a class="nav-link" href="/datavisualization">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Reports</span></a>
-            </li>
+            </li>-->
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
