--- a/bike/bikeapp/templates/bikeapp/managermain.html
+++ b/bike/bikeapp/templates/bikeapp/managermain.html
@@ -71,7 +71,7 @@
                 </a>
              </li>
             <li class="nav-item" onclick="clickHandler(2)">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
+                <a class="nav-link collapsed" href="bar_rent_duration.html" data-toggle="collapse" data-target="#collapseUtilities"
                     aria-expanded="true" aria-controls="collapseUtilities">
                     <i class="fas fa-fw fa-wrench"></i>
                     <span>Rental Situation</span>
